--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Jenny</h1>
     <img src="profile.jpeg" alt="">
     <p>My profile text</p>
+    <p>I am a Software Developer</p>
   </body>
   </html>
